style(hero): glow effect

--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,21 @@
 
 body {
   font-family: "Outfit", sans-serif;
+  overflow-x: hidden;
 }
 
 .glow {
   width: 0px;
   height: 0px;
   border-radius: 50%;
-  box-shadow: 0 0 500px 150px #b9fd50;
+  box-shadow: 0 0 200px 130px #b9fd50;
+}
+
+@media screen and (min-width: 768px) {
+  .glow {
+    width: 0px;
+    height: 0px;
+    border-radius: 50%;
+    box-shadow: 0 0 1000px 200px #b8fd50af;
+  }
 }
